Fix layout bugs, rename files for GitHub Pages, add missing assets

--- a/Spotify-Web-Player.css
+++ b/Spotify-Web-Player.css
@@ -108,7 +108,7 @@ width:1.25rem;
     margin-right:1rem;
 }
 
-.icons:hover i{
+.icons i:hover{
    opacity: 1;
 }
 
@@ -214,7 +214,8 @@ border-radius: 0.5rem;
 }
 
 .card-title {
-    font-size: 600;
+    font-size: 0.95rem;
+    font-weight: 600;
 }
 
 .card-info {
@@ -239,7 +240,7 @@ border-radius: 0.5rem;
   background-color:black;
   position:fixed;
   bottom:0px;
-  width:150%;
+  width:100%;
   height: 72px;
   display: flex;
   overflow:auto;
@@ -252,8 +253,7 @@ border-radius: 0.5rem;
 }
 
 .player {
-    width: 100%;
-    margin-right: 1250px;
+    width: 50%;
     background-color:black;
     margin-left:40px;
 }
@@ -308,7 +308,7 @@ border-radius: 0.5rem;
 
 .album{
     display: flex;
-    justify-content:space- ;
+    justify-content:space-between;
     align-items:center ;
 }
 .image {
